# gorilla-function-calling

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
endpoint/: lib.py  main.py  models.py
scripts/: start.sh
